Add api create topic, create topic with partition
