# src/main/java/io/strimzi/kafka/bridge/AdminClientEndpoint.java
@@ -10,20 +10,13 @@ import io.strimzi.kafka.bridge.config.KafkaConfig;
 import io.vertx.core.AsyncResult;
 import io.vertx.core.Handler;
 import io.vertx.core.Vertx;
-import io.vertx.kafka.admin.Config;
-import io.vertx.kafka.admin.KafkaAdminClient;
-import io.vertx.kafka.admin.ListOffsetsResultInfo;
-import io.vertx.kafka.admin.OffsetSpec;
-import io.vertx.kafka.admin.TopicDescription;
+import io.vertx.kafka.admin.*;
 import io.vertx.kafka.client.common.ConfigResource;
 import io.vertx.kafka.client.common.TopicPartition;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.List;
-import java.util.Map;
-import java.util.Properties;
-import java.util.Set;
+import java.util.*;
 
 /**
  * Base class for admin client endpoint
@@ -87,6 +80,12 @@ public abstract class AdminClientEndpoint implements BridgeEndpoint {
     protected void listTopics(Handler<AsyncResult<Set<String>>> handler) {
         log.info("List topics");
         this.adminClient.listTopics(handler);
+    }
+
+    protected void createTopic(String name, int partition, short re){
+        log.info("Create topic, topic name: {}", name);
+        NewTopic newTopic = new NewTopic(name, partition, re);
+        this.adminClient.createTopics(Collections.singletonList(newTopic));
     }
 
     /**
