# src/main/java/io/strimzi/kafka/bridge/http/HttpBridge.java
@@ -157,6 +157,9 @@ public class HttpBridge extends AbstractVerticle {
                 routerBuilder.operation(this.SEEK_TO_BEGINNING.getOperationId().toString()).handler(this.SEEK_TO_BEGINNING);
                 routerBuilder.operation(this.SEEK_TO_END.getOperationId().toString()).handler(this.SEEK_TO_END);
                 routerBuilder.operation(this.LIST_TOPICS.getOperationId().toString()).handler(this.LIST_TOPICS);
+                routerBuilder.operation(this.CREATE_TOPIC.getOperationId().toString()).handler(this.CREATE_TOPIC);
+                routerBuilder.operation(HttpOpenApiOperations.CREATE_TOPIC_PARTITION.toString()).handler(this.CREATE_TOPIC);
+                routerBuilder.operation(HttpOpenApiOperations.CREATE_TOPIC_PARTITION_REPLICAS.toString()).handler(this.CREATE_TOPIC);
                 routerBuilder.operation(this.GET_TOPIC.getOperationId().toString()).handler(this.GET_TOPIC);
                 routerBuilder.operation(this.LIST_PARTITIONS.getOperationId().toString()).handler(this.LIST_PARTITIONS);
                 routerBuilder.operation(this.GET_PARTITION.getOperationId().toString()).handler(this.GET_PARTITION);
@@ -360,6 +363,13 @@ public class HttpBridge extends AbstractVerticle {
 
     private void listTopics(RoutingContext routingContext) {
         this.httpBridgeContext.setOpenApiOperation(HttpOpenApiOperations.LIST_TOPICS);
+        processAdminClient(routingContext);
+    }
+
+    private void createTopic(RoutingContext routingContext) {
+        this.httpBridgeContext.setOpenApiOperation(HttpOpenApiOperations.CREATE_TOPIC);
+        this.httpBridgeContext.setOpenApiOperation(HttpOpenApiOperations.CREATE_TOPIC_PARTITION);
+        this.httpBridgeContext.setOpenApiOperation(HttpOpenApiOperations.CREATE_TOPIC_PARTITION_REPLICAS);
         processAdminClient(routingContext);
     }
 
@@ -704,6 +714,13 @@ public class HttpBridge extends AbstractVerticle {
         @Override
         public void process(RoutingContext routingContext) {
             listTopics(routingContext);
+        }
+    };
+    HttpOpenApiOperation CREATE_TOPIC = new HttpOpenApiOperation(HttpOpenApiOperations.CREATE_TOPIC) {
+
+        @Override
+        public void process(RoutingContext routingContext) {
+            createTopic(routingContext);
         }
     };
 
